--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(Qt4 REQUIRED)
 
 include_directories(${QT_INCLUDES} ${CMAKE_CURRENT_BINARY_DIR})
 
-set(ASEsqlTest_SRCS ASEsqlTest.cpp main.cpp)
+set(ASEsqlTest_SRCS ConnectToDatabase.cpp centralWidget.cpp ASEsqlTest.cpp main.cpp)
 qt4_automoc(${ASEsqlTest_SRCS})
 add_executable(ASEsqlTest ${ASEsqlTest_SRCS})
-target_link_libraries(ASEsqlTest ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
+target_link_libraries(ASEsqlTest ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTSQL_LIBRARY})
